fix incorrect spacing

--- a/packages/react/src/SubNav/SubNav.module.css
+++ b/packages/react/src/SubNav/SubNav.module.css
@@ -42,6 +42,10 @@
   display: none !important;
 }
 
+.SubNav__sub-menu-children {
+  display: contents;
+}
+
 /*
  * Narrow breakpoint
  */
